@@ -1,0 +1,55 @@
+package com.booksaw.betterTeams.commands.teama;
+
+import java.util.List;
+
+import org.bukkit.command.CommandSender;
+
+import com.booksaw.betterTeams.Main;
+import com.booksaw.betterTeams.MessageManager;
+import com.booksaw.betterTeams.commands.SubCommand;
+
+public class VersionTeama extends SubCommand {
+
+	@Override
+	public String onCommand(CommandSender sender, String label, String[] args) {
+
+		MessageManager.sendMessageF(sender, "admin.version", Main.plugin.getDescription().getVersion() + "");
+
+		return null;
+	}
+
+	@Override
+	public String getCommand() {
+		return "version";
+	}
+
+	@Override
+	public String getNode() {
+		return "admin.version";
+	}
+
+	@Override
+	public String getHelp() {
+		return "Check the plugin version";
+	}
+
+	@Override
+	public String getArguments() {
+		return null;
+	}
+
+	@Override
+	public int getMinimumArguments() {
+		return 0;
+	}
+
+	@Override
+	public int getMaximumArguments() {
+		return 0;
+	}
+
+	@Override
+	public void onTabComplete(List<String> options, CommandSender sender, String label, String[] args) {
+	}
+
+}
